2008-11-21 Roman,Maxim
- !!!!:/UI/Vision: Binary heap sort algorithm is used for child's widgets order set. Significant performance improve.


2008-11-21 Roman
- /UI/VCAEngine: Group request for widget's tree is made time optimal for session mode.
- !:/UI/VCAEngine: Added not full group request's for libraries of widget's tree and projects tree.


2008-11-20 Maxim
- FIX:/UI/Vision: procedure dynamic if fixed for primitive ElFigure.
- FIX:/UI/WebVision: filling the simple arc is modified for primitive ElFigure.


2008-11-20 Roman
- /Transport/Sockets: Closed input connections limit counter is added to transport's status line.
- FIX:/Transport/Sockets: Closing protocol after broken connection is added.
- !:/UI/VCAEngine: Independent loading generic attributes is added. For storing of geometry broken and lost base widgets of inherits.
- !:/UI/VCAEngine: Removed support of storing attributes old DB.
- FIX:/UI/Vision: Disable message for not full link made connection. System crashed after it message dialog close.
- /UI/Vision: Resize underlie selected widgets support is added.
- FIX:/DAQ/Transporter: Default saving parameters is disabled.
- !!:/DemoDB: Is updated. New mnemo to second signal object is added. Graphic's groups is updated and fixed.


2008-11-18 Maxim
- FIX:/UI/Vision: Different little fixes are made for primitive ElFigure.


2008-11-17 Roman
- /XML: Return (XMLNode *) to attribute delete (attrDel) function is added.
- /Transport/SSL: Number of closed connections by exceeding limit of client's connections is adding to status line.
- FIX:/Transport/SSL: No error result process for BIO_should_retry() is added.
- FIX:/Transport/SSL: Client connections' registration is fixed for protocol's objects' name fix.
- FIX:/Transport/SSL: Closing protocol after broken connection is added.
- FIX:/Transport/SSL: OpenSSL library bug is bypassed. No closing client's socket after connection terminate by client.
- /UI/QTCfg: Real type field's enter mechanism is changed.